2002-06-17 v0.19:
  * Fix handling of timeout where the server prints an error before disconnecting. (Reported by Scott Kay)
  * Fix specifying some default arguments twice. (Fixes gcc 3.1 compile)
  * Make all STL includes use the new method. (Fixes warnings under gcc 3.1)
  * Fix error on writing temp file sometimes leaving the broken temp file rather than deleting it.
  * Fix restoring of previous group upon completion of -@.
  * Reset to previous startpath when -@ completes, not to previous -p.
  * Improved skipping of command line args when bad parameters are given. (Eg, now nget -p bad -r foo -p good -r bar will still execute the -p good -r bar part, rather than exiting on the first error.)
  * Added GROUP error exit status (code 16) for when all servers fail to update a group's headers. (Previously gave an OTHER error.)
  * Search the cache for all adjacent -r/-R options in a single loop.  (Speeds up command lines like nget -Gfoo -r bar -r baz -r boo. (options -h/-G/-g/-@ split -r chains.))
  * For -G .. -r .. search while reading rather than loading cache into memory and then searching.  (Speed up and memory usage reduction.)
  * Actually honor -c option again.  (Case sensitive matches)
  * Update configure --with-*=DIR options, now searches in both DIR and DIR/{include,lib}.  Also adds --with-*-{include,lib}=DIR to force specific locations for each.
  * Many additions to test suite, including a bunch of file error condition checks using SUBTERFUGUE.  A few patches for uulib and zlib are required to pass all tests. (See http://nget.sourceforge.net/patches/) (Note: patches have already been sent upstream, but are provided in case you don't want to wait for a new upstream release)

2002-05-17 v0.18.2:
  * Work around exception handling segfaults with older versions of gcc by not using multiple inheritance in exception classes. (reported by Waldemar la Tendresse)
  * Fix redefinition of SIZEOF_INT_FAST64_T compile warnings on systems without int_fast64_t.